--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
+    "expo-updates": "~29.0.12",
     "expo-web-browser": "~15.0.9",
     "nativewind": "^4.2.1",
     "prettier": "^3.6.2",
