--- a/package.json
+++ b/package.json
@@ -13,25 +13,28 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@gorhom/bottom-sheet": "^5.2.6",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "@types/react-native-snap-carousel": "^3.8.12",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
-    "expo": "54.0.23",
+    "expo": "~54.0.25",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.18",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
-    "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.14",
-    "expo-splash-screen": "~31.0.10",
+    "expo-linking": "~8.0.9",
+    "expo-local-authentication": "~17.0.7",
+    "expo-router": "~6.0.15",
+    "expo-secure-store": "~15.0.7",
+    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
-    "expo-updates": "~29.0.12",
+    "expo-updates": "~29.0.13",
     "expo-web-browser": "~15.0.9",
     "nativewind": "^4.2.1",
     "prettier": "^3.6.2",
@@ -42,12 +45,13 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-snap-carousel": "^3.9.1",
+    "react-native-snap-carousel": "^1.3.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@types/react-native-snap-carousel": "^3.8.12",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
