--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-native-screens": "~4.16.0",
     "react-native-snap-carousel": "^1.3.1",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
